[package]
name = "laputa"
version = "0.1.0"
authors = ["Huang.Weijie <wjhuang@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "^0.17"
actix = "^0.9"
actix-web = "^2.0"
actix-rt = "^1.0.0"
actix-http = "^1.0"
lazy_static = "^1.4.0"
futures = "^0.3.4"
serde = "^1.0.104"
log = "^0.4.8"
env_logger = "^0.7.1"
chrono = "^0.4.10"
colored = "^1.9"