[workspace]
resolver = "2"
members = ["core", "v8"]

[workspace.package]
version = "0.2.0"
authors = ["Huang.Weijie <wjhuang@live.cn>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wjhuang88/Laputa"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size

[workspace.dependencies]
v8 = "^0.82"
thiserror = "1.0"
snowdon = { version = "^0.2", default-features = false, features = ["lock-free"] }
url = "2.5"
cookie = "0.18"